feat:  Implementing LeaveService