@@ -3,8 +3,6 @@ package com.otbs.auth.controller;
 import com.otbs.auth.dto.JwtResponse;
 import com.otbs.auth.dto.AuthRequest;
 import com.otbs.auth.dto.RefreshRequest;
-import com.otbs.auth.mapper.UserAttributesMapper;
-import com.otbs.auth.model.User;
 import com.otbs.auth.util.JwtUtils;
 import com.otbs.feign.client.EmployeeClient;
 import com.otbs.feign.dto.EmployeeResponse;
@@ -12,17 +10,13 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.ldap.core.LdapTemplate;
-import org.springframework.ldap.query.LdapQueryBuilder;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -37,18 +31,23 @@ public class AuthController {
     private final EmployeeClient employeeClient;
 
     @PostMapping("/login")
-    public ResponseEntity<?> authenticateUser(@RequestBody AuthRequest authRequest) {
+    public ResponseEntity<JwtResponse> authenticateUser(@RequestBody AuthRequest authRequest) {
         Authentication authentication = authenticationManager.authenticate(
                 new UsernamePasswordAuthenticationToken(authRequest.username(), authRequest.password()));
 
         UserDetails userDetails = (UserDetails) authentication.getPrincipal();
-
         List<String> roles = userDetails.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
                 .collect(Collectors.toList());
 
         String accessToken = jwtUtils.generateAccessToken(authRequest.username(), roles);
-        EmployeeResponse user = employeeClient.getEmployeeByUsername(authRequest.username()).getBody();
+
+        ResponseEntity<EmployeeResponse> response = employeeClient.getEmployeeByUsername(authRequest.username());
+        EmployeeResponse user = response != null ? response.getBody() : null;
+        if (user == null) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
+        }
+
         return ResponseEntity.ok(new JwtResponse(
                 accessToken,
                 jwtUtils.generateRefreshToken(authRequest.username(), roles),
@@ -59,29 +58,28 @@ public class AuthController {
     }
 
     @PostMapping("/refresh")
-    public ResponseEntity<?> refreshToken(@RequestBody RefreshRequest refreshRequest) {
+    public ResponseEntity<JwtResponse> refreshToken(@RequestBody RefreshRequest refreshRequest) {
         String refreshToken = refreshRequest.refreshToken();
 
         if (jwtUtils.validateRefreshToken(refreshToken)) {
             String username = jwtUtils.getUserNameFromJwtToken(refreshToken);
+            ResponseEntity<EmployeeResponse> response = employeeClient.getEmployeeByUsername(username);
+            EmployeeResponse user = response != null ? response.getBody() : null;
+            if (user == null) {
+                return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
+            }
 
-            // Verify user still exists in LDAP
-            EmployeeResponse user = employeeClient.getEmployeeByUsername(username).getBody();
-
-            assert user != null;
-            List<String> roles = Collections.singletonList(user.role());
-
+            List<String> roles = List.of(user.role());
             String newAccessToken = jwtUtils.generateAccessToken(username, roles);
             String newRefreshToken = jwtUtils.generateRefreshToken(username, roles);
 
             return ResponseEntity.ok(new JwtResponse(
-                        newAccessToken,
-                        newRefreshToken,
-                        jwtUtils.getAccessExpirationMs(),
-                        jwtUtils.getRefreshExpirationMs(),
-                        user
+                    newAccessToken,
+                    newRefreshToken,
+                    jwtUtils.getAccessExpirationMs(),
+                    jwtUtils.getRefreshExpirationMs(),
+                    user
             ));
-
         }
 
         return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
